# reachy-mini-example

./: .env.example  .gitignore  pyproject.toml  reachy_audio.py  reachy_mini_agent.py
